--- a/site/templates/layouts/default.twig
+++ b/site/templates/layouts/default.twig
@@ -43,9 +43,9 @@
       {% with { logo: site.images.filterBy('template', 'logo').first } %}
       {% if logo %}
       <figure class="p1"><a
-        class="block"
+        class="block maxw ha"
         href="{{ kirby.url }}"
-        style="width: {{ logo.width }}px; max-width: 100%; height: auto;"
+        style="width: {{ logo.width }}px;"
       ><img
         class="block w100 ha"
         src="{{ logo.url }}"
