--- a/site/templates/pages/project.twig
+++ b/site/templates/pages/project.twig
@@ -1,53 +1,70 @@
 {% extends layout() %}
 
 {% block main %}
+{% with {
+  tp: page.textPosition.value,
+} %}
 
-  <div class="ld-row">
+  <div class="{% if not tp %}ld-row{% endif %}">
     <div class="span1 order9">
 
       <div class="p025">
+
         <div class="p075">
-          <h1 class="h2 ld-h3 lh2 fw800">{{ page.title }}</h1>
+          <h1 class="h2 {% if not tp %}ld-h3{% endif %} lh2 fw800">{{ page.title }}</h1>
         </div>
-        {% if page.text.notEmpty %}
-        <div class="p075 copy lh4">
-          {{ page.text | kt({ width: 640, srcset: [ 320, 640, 960, 1280 ] }) }}
+
+        {% if page.text.notEmpty
+          or page.client.notEmpty
+          or page.role.notEmpty
+          or page.date.notEmpty
+          or page.website.notEmpty %}
+        <div class="{% if tp == 'above' %}ld-row{% endif %}">
+          {% if page.text.notEmpty %}
+          <div class="span2">
+            <div class="p075 copy lh4">
+              {{ page.text | kt({ width: 640, srcset: [ 320, 640, 960, 1280 ] }) }}
+            </div>
+          </div>
+          {% endif %}
+          {% if page.client.notEmpty
+            or page.role.notEmpty
+            or page.date.notEmpty
+            or page.website.notEmpty %}
+          <div class="span1">
+            <div class="p075 copy lh4">
+              <dl>
+                {% if page.client.notEmpty %}
+                <dt>Client</dt>
+                <dd>{{ page.client }}</dd>
+                {% endif %}
+                {% if page.role.notEmpty %}
+                <dt>Role</dt>
+                <dd>{{ page.role }}</dd>
+                {% endif %}
+                {% if page.date.notEmpty %}
+                <dt>Date</dt>
+                <dd>{{ page.date }}</dd>
+                {% endif %}
+                {% if page.website.notEmpty %}
+                <dt>Website</dt>
+                <dd><a class="ul" href="{{ page.website }}">{{ page.website }}</a></dd>
+                {% endif %}
+              </dl>
+            </div>
+          </div>
+          {% endif %}
         </div>
         {% endif %}
-      </div>
 
-      {% if page.client.notEmpty
-        or page.role.notEmpty
-        or page.date.notEmpty
-        or page.website.notEmpty %}
-      <div class="p1 copy lh4">
-        <dl>
-          {% if page.client.notEmpty %}
-          <dt>Client</dt>
-          <dd>{{ page.client }}</dd>
-          {% endif %}
-          {% if page.role.notEmpty %}
-          <dt>Role</dt>
-          <dd>{{ page.role }}</dd>
-          {% endif %}
-          {% if page.date.notEmpty %}
-          <dt>Date</dt>
-          <dd>{{ page.date }}</dd>
-          {% endif %}
-          {% if page.website.notEmpty %}
-          <dt>Website</dt>
-          <dd><a class="ul" href="{{ page.website }}">{{ page.website }}</a></dd>
-          {% endif %}
-        </dl>
       </div>
-      {% endif %}
 
     </div>
     {% with { images: page.images.filterBy('template', 'project').sortBy('sort') } %}
     {% if images.count %}
     <div class="span2">
       {% for _image in images %}
-      <div class="p1 copy lh4">
+      <div class="p1 copy {%- if tp == 'above' %} copy--wide{% endif %} lh4">
       {{
         "(image: %s caption: %s)"
           | format(_image.filename, _image.caption)
@@ -60,4 +77,5 @@
     {% endwith %}
   </div>
 
+{% endwith %}
 {% endblock %}
