--- a/site/templates/pages/textpage.twig
+++ b/site/templates/pages/textpage.twig
@@ -7,7 +7,7 @@
     <div class="p075">
       <h1 class="h2 lh2 fw800">{{ page.title }}</h1>
     </div>
-    <div class="p075 copy lh4">
+    <div class="p075 copy copy--wide lh4">
       {{ page.text | kt({ width: 640, srcset: [ 320, 640, 960, 1280 ] }) }}
     </div>
   </div>
