css body padding

--- a/site/templates/layouts/default.twig
+++ b/site/templates/layouts/default.twig
@@ -29,7 +29,7 @@
   <!-- End Google Tag Manager -->
   {% endif %}
 </head>
-<body class="body my1 py05 lh4">
+<body class="body lh4">
 
   {% if site.googleTagManager.notEmpty %}
   <!-- Google Tag Manager (noscript) -->
