--- a/src/css/-body.css
+++ b/src/css/-body.css
@@ -2,6 +2,8 @@
   max-width: 28rem;
   margin-left: auto;
   margin-right: auto;
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
 }
 
 @media (--view-sd) {
