--- a/site/templates/layouts/default.twig
+++ b/site/templates/layouts/default.twig
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html lang="{{ site.htmlLang }}">
 <head>
   <meta charset="utf-8">
   <title>{% block title %}{{ page.title }} &ndash; {{ site.title }}{% endblock %}</title>
