--- a/site/templates/pages/homepage.twig
+++ b/site/templates/pages/homepage.twig
@@ -25,6 +25,7 @@
           src="{{ _image.crop(288, 288).url }}"
           srcset="{{ _image.crop(288, 288).url }} 288w,{{ _image.crop(576, 576).url }} 576w"
           {% endif %}
+          alt="{{ _page.title }} Cover"
         >
         {% else %}
         <svg class="block bg-black-05" viewBox="0 0 1 1"></svg>
