--- a/src/css/-copy.css
+++ b/src/css/-copy.css
@@ -58,6 +58,7 @@
     margin-top: .5em;
   }
   & a {
+    color: var(--link-color);
     text-decoration: underline;
   }
   & img {
@@ -120,13 +121,12 @@
     line-height: 20px;
   }
   & code {
-    display: inline-block;
-    padding: 0 4px;
-    background-color: var(--black-05);
+    padding: 2px;
+    background-color: var(--theme-text-color-05);
   }
   & pre {
     white-space: pre-wrap;
-    background-color: var(--black-05);
+    background-color: var(--theme-text-color-05);
     & code {
       display: block;
       padding: 16px 18px;
