--- a/site/templates/pages/homepage.twig
+++ b/site/templates/pages/homepage.twig
@@ -8,34 +8,34 @@
 
 {% block main %}
 
-  <div class="sd-grid2 ld-grid3">
-    {% for _page in site.pages %}
-    {% if _page.template == 'project' %}
-    {% with {
-      _image: _page.images.filterBy('template', 'project').sortBy('sort').first,
-    } %}
-    <article class="p1"><a class="block anchor" href="{{ _page.url }}">
-      <figure>
-        {% if _image %}
-        <img
-          class="block w100 maxw"
-          {% if _image.extension in ['gif', 'svg'] %}
-          src="{{ _image.url }}"
-          {% else %}
-          src="{{ _image.crop(288, 288).url }}"
-          srcset="{{ _image.crop(288, 288).url }} 288w,{{ _image.crop(576, 576).url }} 576w"
-          {% endif %}
-          alt="{{ _page.title }} Cover"
-        >
-        {% else %}
-        <svg class="block bg-black-05" viewBox="0 0 1 1"></svg>
-        {% endif %}
-      </figure>
-      <h3 class="mt025 ul:hover">{{ _page.title }}</h3>
-    </a></article>
-    {% endwith %}
-    {% endif %}
-    {% endfor %}
-  </div>
+    <div class="sd-grid2 ld-grid3">
+      {%~ for _page in site.pages %}
+      {%~ if _page.template == 'project' %}
+      {%~ with {
+        _image: _page.images.filterBy('template', 'project').sortBy('sort').first,
+      } %}
+      <article class="p1"><a class="block anchor" href="{{ _page.url }}">
+        <figure>
+          {%~ if _image %}
+          <img
+            class="block w100 maxw"
+            {%~ if _image.extension in ['gif', 'svg'] %}
+            src="{{ _image.url }}"
+            {%~ else %}
+            src="{{ _image.crop(288, 288).url }}"
+            srcset="{{ _image.crop(288, 288).url }} 288w,{{ _image.crop(576, 576).url }} 576w"
+            {%~ endif %}
+            alt="{{ _page.title }} Cover"
+          >
+          {%~ else %}
+          <svg class="block bg-black-05" viewBox="0 0 1 1"></svg>
+          {%~ endif %}
+        </figure>
+        <h3 class="mt025 ul:hover">{{ _page.title }}</h3>
+      </a></article>
+      {%~ endwith %}
+      {%~ endif %}
+      {%~ endfor %}
+    </div>
 
 {% endblock %}
