--- a/src/css/-color.css
+++ b/src/css/-color.css
@@ -11,3 +11,8 @@
 .bg-highlight {
   background-color: var(--theme-highlight-background-color);
 }
+
+.bg-highlight-shadow {
+  box-shadow: -1px 0 0 2px var(--theme-highlight-background-color),
+    1px 0 0 2px var(--theme-highlight-background-color);
+}
