update Abrusco, drop IE support

--- a/site/templates/layouts/default.twig
+++ b/site/templates/layouts/default.twig
@@ -82,11 +82,11 @@
       {%~ endwith %}
     </div>
     {%~ if site.description.notEmpty %}
-    <div class="py05 sd-p05">
-      <aside class="copy p1">
+    <aside class="py05 sd-p05">
+      <div class="copy p1">
         {{ site.description | kt }}
-      </aside>
-    </div>
+      </div>
+    </aside>
     {%~ endif %}
     <nav class="py05 sd-p05">
       <ul class="px075 py1">
