--- a/site/templates/pages/project.twig
+++ b/site/templates/pages/project.twig
@@ -5,13 +5,13 @@
   tp: page.textPosition.value,
 } %}
 
-    <div class="{% if not tp %}ld-row{% endif %}">
+    <div class="{% if not tp %}ld:row{% endif %}">
       <div class="span1 order9">
 
         <div class="p025">
 
           <div class="p075">
-            <h1 class="h2 {%- if not tp %} ld-h3{% endif %} lh2 fw800">{{ page.title }}</h1>
+            <h1 class="h2 {%- if not tp %} ld:h3{% endif %} lh2 fw800">{{ page.title }}</h1>
           </div>
 
           {%~ if page.text.notEmpty
@@ -19,7 +19,7 @@
             or page.role.notEmpty
             or page.date.notEmpty
             or page.website.notEmpty %}
-          <div class="{% if tp == 'above' %}ld-row{% endif %}">
+          <div class="{% if tp == 'above' %}ld:row{% endif %}">
             {%~ if page.text.notEmpty %}
             <div class="span2">
               <div class="p075 copy lh4">
