projects title type

--- a/site/templates/pages/homepage.twig
+++ b/site/templates/pages/homepage.twig
@@ -31,7 +31,7 @@
           <svg class="block bg-black-05" viewBox="0 0 1 1"></svg>
           {%~ endif %}
         </figure>
-        <h3 class="mt025 ul:hover">{{ _page.title }}</h3>
+        <h3 class="mt025 h5 lh2 fw700 ul:hover">{{ _page.title }}</h3>
       </a></article>
       {%~ endwith %}
       {%~ endif %}
